# 6DOF_Arm

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/mycobot_description/share/ament_index/resource_index/parent_prefix_path/: mycobot_description
install/mycobot_description/share/mycobot_description/: local_setup.sh  package.sh  package.xml
install/robotic_arm/lib/robotic_arm/: example_joint_trajectory_publisher_cpp
install/robotic_arm/local/lib/python3.10/dist-packages/robotic_arm-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/robotic_arm/share/ament_index/resource_index/parent_prefix_path/: robotic_arm
install/robotic_arm/share/robotic_arm/: local_setup.sh  package.sh
install/robotic_arm/share/robotic_arm/config/: controllers.yaml
install/robotic_arm/share/robotic_arm/launch/: mycobot_launch_control.py
install/robotic_arm/share/robotic_arm/urdf/ros2_control/classic_gazebo/: mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.xacro  mycobot_280_ros2_control.xacro
install/robotic_arm/share/robotic_arm/worlds/: empty.world
log/: latest_build
src/mycobot_description/: CMakeLists.txt
src/mycobot_description/urdf/: mycobot_280_urdf.xacro
src/robotic_arm/: CMakeLists.txt
src/robotic_arm/launch/: display.launch.py  launch_bot.launch.py
src/robotic_arm/scripts/: example_joint_trajectory_publisher.py
src/robotic_arm/urdf/: model.urdf
src/robotic_arm/urdf/ros2_control/gazebo/: mycobot_280.urdf.xacro  mycobot_280_gazebo.xacro  mycobot_280_ros2_control.xacro
